infra/gateway/1_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateways
  labels:
    shared-gateway-access: "true"
