infra/gateway/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    shared-gateway-access: "true"
---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: http-web
  namespace: gateway
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            shared-gateway-access: "true"
