infra/gateway/istio-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: gateway
spec:
  gatewayClassName: istio-gateway
  addresses:
  - value: asm-ingressgateway.asm-gateways.svc.cluster.local
    type: Hostname
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: All
