infra/gateway/3_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: asm-ingressgateway
  namespace: gateways
spec:
  parentRefs:
  - kind: Gateway
    name: asm-ingressgateway-http-xlb
    namespace: gateways
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: asm-ingressgateway
      port: 80
